--- a/src/.env
+++ b/src/.env
@@ -1,9 +1,9 @@
 #variables de entorno 
 
 #Cadena de conexion a mongoDB desde el servidor expres.js
-MONGODB _CONEXION=mongodb+srv://olailz103_db_user:<Y6i8bWSjlyEHaoZO>@project.6vdibg1.mongodb.net/?retryWrites=true&w=majority&appName=Project
+MONGODB_CONNECTION=mongodb+srv://pruebaoliver:@Terry2025@proyecto1.mlumf0t.mongodb.net/?retryWrites=true&w=majority&appName=Proyecto1
 
 #Configuracion del servidor 
 PORT=3000
 
-DB_NAME = todoListDB
+DB_NAME=todoListDB
