--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #variables de entorno 
 
 #Cadena de conexion a mongoDB desde el servidor expres.js
-MONGODB_CONNECTION=mongodb+srv://pruebaoliver:@Terry2025@proyecto1.mlumf0t.mongodb.net/?retryWrites=true&w=majority&appName=Proyecto1
+MONGODB_CONNECTION=mongodb+srv://pruebaoliver:DxHRvBfAgbBf0a9T@proyecto1.mlumf0t.mongodb.net/?retryWrites=true&w=majority&appName=Proyecto1
 
 #Configuracion del servidor 
 PORT=3000
